re PR middle-end/38371 (Fold check error during bootstrap)

PR middle-end/38371
	* fold-const.c (fold_checksum_tree): Allow modification of
	TYPE_NEXT_VARIANT.

From-SVN: r142430